<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.hy.powerplatform.my_utils.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/staff_infor">
    </com.hy.powerplatform.my_utils.myViews.Header>

     <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:background="#C4E1FF"
        android:orientation="horizontal"> 
       <TextView  
           android:id="@+id/busHidden1"
            android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/col_busCode"
           android:textSize="18sp" />
       
        <TextView  
            android:id="@+id/driverHidden1"
            android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/col_driver" android:visibility="gone"
           android:textSize="18sp" />
           <TextView  
           android:id="@+id/lineHidden1"
            android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/col_line" android:visibility="gone"
           android:textSize="18sp" />
           <TextView  
           android:id="@+id/luduiHidden1"
            android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/col_ludui" android:visibility="gone"
           android:textSize="18sp" />
        <TextView 
            android:layout_weight="1" 
            android:layout_width="match_parent"
           android:layout_height="40dp"
           android:gravity="center"
            android:text="@string/col_planMile" 
            android:textSize="18sp" /> 
        <TextView 
            android:layout_weight="1" 
             android:layout_width="match_parent"
           android:layout_height="40dp"
           android:gravity="center"
            android:text="@string/col_realMile" 
            android:textSize="18sp" /> 
    </LinearLayout>

    <ListView
        android:id="@+id/mileListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@null" 
        >
    </ListView>

    </LinearLayout>
