<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.hy.powerplatform.business_inspect.activity.SelectTypeActivity">

    <com.hy.powerplatform.my_utils.myViews.Header
       android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/business_inspect">
    </com.hy.powerplatform.my_utils.myViews.Header>

    <!--功能列表分割线-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="2dp"
            android:layout_height="14dp"
            android:background="@color/color_bg_selected"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:text="@string/function_list"
            android:textSize="14dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_margin="15dp"/>

    <!--列表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbStrate"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/inspect_demonstrate"
                android:text="@string/inspect_demonstrate" />

            <RadioButton
                android:id="@+id/rbHealth"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/inspect_health"
                android:text="@string/inspect_health1"/>

            <RadioButton
                android:id="@+id/rbSuffer"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/inspect_suffer"
                android:text="@string/inspect_suffer"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbSkill"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/inspect_skill"
                android:text="@string/inspect_skill" />

            <RadioButton
                android:id="@+id/rbAll"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/inspect_all"
                android:text="@string/inspect_all"/>

            <RadioButton
                android:id="@+id/rbShiGu"
                style="@style/fragment0_radionbutton"
                android:drawableTop="@drawable/shigu"
                android:text="事故管理"/>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
